﻿zg 03.12.2014 17:52:55 +0200 - build 459

1. уточнение 457. данные для одной и той же колонки не замещают друг друга, а склеиваются.

zg 03.12.2014 11:22:55 +0200 - build 458

1. в обработчик Panel.AddCustomDataCallback данные приходят в виде {guid="строка"}.

zg 03.12.2014 03:57:46 +0200 - build 457

1. экспериментально. продолжение 456. поддержка колонок C1-C9.

zg 30.11.2014 12:05:23 +0200 - build 456

1. Panel.AddCustomDataCallback: добавляет новый обработчик данных для кастом колонок.

zg 29.11.2014 13:27:38 +0200 - build 455

1. уточнение поддержки UTF-8 BOM для moonscript.

shmuel 28.11.2014 20:27:54 +0200 - build 454

1. Продолжение 452: добавлена поддержка загрузки старого формата файла клавиатурного макроса.
   * Сохранение будет производится в новом формате.
   * Через полгода поддержку старого формата следует убрать.

shmuel 27.11.2014 23:44:56 +0200 - build 453

1. Уточнение 452.

shmuel 27.11.2014 21:06:15 +0200 - build 452

1. Файловый формат клавиатурного макроса сделан подобным формату стационарного макроса.
   Сохранённые клавиатурные макросы прежнего формата должны быть преобразованы в новый.

shmuel 24.11.2014 02:05:58 +0200 - build 451

1. LuaFAR: в функциях editor.Editor и viewer.Viewer значение по умолчанию параметра Title,
   передаваемое в Фар - NULL, а не FileName, как было до сих пор. См. M#2867.

shmuel 19.11.2014 13:16:10 +0200 - build 450

1. M#2609: LuaFAR: защита от ошибок в far.SaveScreen/RestoreScreen.

shmuel 13.11.2014 13:42:23 +0200 - build 449

1. LuaFAR: меню, выводимое функцией far.Show, может быть закрыто и нажатием клавиши Space.

shmuel 05.11.2014 13:21:11 +0200 - build 448

1. Из окружения макроса не убирались "загрузочные" функции MenuItem и NoMenuItem.

shmuel 05.11.2014 12:25:16 +0200 - build 447

1. Ещё раз M#2726.

shmuel 04.11.2014 23:09:39 +0200 - build 446

1. M#2726: mbrowser.lua:73: bad argument #3 to 'format' (invalid multibyte string).

shmuel 02.11.2014 16:46:25 +0200 - build 445
