@@ -1,4 +1,8 @@
-﻿zg 03.12.2014 17:52:55 +0200 - build 459
+﻿zg 06.12.2014 00:17:49 +0200 - build 460
+
+1. Panel.AddCustomDataCallback удалена.
+
+zg 03.12.2014 17:52:55 +0200 - build 459
 
 1. уточнение 457. данные для одной и той же колонки не замещают друг друга, а склеиваются.
 
